--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
     "react-slick": "^0.30.2",
+    "react-youtube": "^10.1.0",
     "reactstrap": "^9.2.2",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.11",
